back to home & btn submit fixed

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -95,6 +95,11 @@
     background-color: #00a0f0;
     border: 1px solid #00a0f0;
   }
+  &:hover{
+    text-decoration: none;
+    color: currentColor;
+  }
+
 }
 .iti-arrow{
   display: none;
