--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -18,6 +18,10 @@
     transform: translateY(-20%);
     flex-direction: column;
     overflow: hidden;
+    @media only screen and (max-height: 450px) and (min-width: 600px) and (orientation : landscape){
+      transform: translateY(0%);
+      margin-bottom: 50px;
+    }
     @media only screen and (min-width: 600px) {
       width: 100%;
       flex-direction: row;
@@ -32,10 +36,7 @@
     @media only screen and (min-width: 1100px) {
       width: 85%;
     }
-    @media only screen and (max-height: 450px) , screen and (min-width: 600px){
-      transform: translateY(0%);
-      margin-bottom: 50px;
-    }
+
 
   }
   &-image-icons{
