--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -32,7 +32,7 @@
               يوفر PlusOne  بلس وان للمرضى القدرة على الحصول على رأي خبير طبي عالمي. ويمكنك أيضًا طلب الحصول على خدماتنا من خلال طبيبك المعالج أو مديري الحالات لدينا الذين هم أطباء مؤهلون أيضًا.
               قم باستشارة أحد الخبراء من هنا
               <span class="btns btns-submit btn-link-an"style="padding: 10px ">
-                <a href="/contact">
+                <a href="/contact" style="direction: ltr">
             <%= t :ask_plus_one_expert %></a>
               </span>
               وسيقوم فريقنا بالرد عليك خلال يومين عمل
