dropdown issue fixed

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,7 +20,7 @@
         <div class="menu-item <%= params[:action] === 'contact' ? 'active': nil %>"><a href="<%= contact_path%>"><%= t :contact %> </a></div>
       </div>
       </div>
-      <div class="menu-item-right u-d-flex u-align-item-center">
+      <div class="menu-item-right u-d-flex u-align-item-center ml-3 mr-3">
         <div class="phone-container" style="opacity: 0">
           <div class="icon-container ">
             <i class="fa fa-phone fa-rotate-270 fa-lg"></i>
