--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -24,8 +24,10 @@
         </a>
         <a class="footer-col-link" href="<%= faq_path %>">
           <div class="footer-col-link footer-col-link4"> <%= t :faq %></div></a>
-        <div class="footer-col-link footer-col-link4"> <%= t :Privacy %></div>
-        <div class="footer-col-link footer-col-link4"> <%= t :Terms %></div>
+        <a class="footer-col-link" href="<%= privacy_policy_path %>">
+        <div class="footer-col-link footer-col-link4"> <%= t :Privacy %></div></a>
+        <a class="footer-col-link" href="<%= terms_and_condition_path %>">
+        <div class="footer-col-link footer-col-link4"> <%= t :Terms %></div></a>
 
       </div>
       <div class="footer-col footer-col3">
