--- a/app/views/terms_and_conditions/show.html.erb
+++ b/app/views/terms_and_conditions/show.html.erb
@@ -1,4 +1,4 @@
-<div class="padding-top-75">
+<div class="padding-top-75 <%= is_arabic? ? 'text-right-custom': '' %>">
   <section class="slider">
     <div class="slider-back-image-container slider-back-image-container-faq">
       <div class="slider-text-container">
